force-app/main/default/objects/Error_Logger__c/Error_Logger__c.object-meta.xml
<CustomObject>
    <label>Error Logger</label>
    <nameField>
        <displayFormat>IN-{0}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>