force-app/main/default/objects/Error_Logger__c/fields/Archival_Date__c.field-meta.xml
<CustomField>
    <fullName>Archival_Date__c</fullName>
    <label>Archival Date</label>
    <type>Date</type>
</CustomField>