force-app/main/default/objects/Error_Logger__c/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <description>This is to store the short descripton of the error message</description>
    <label>Brief Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>