force-app/main/default/objects/Error_Logger__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <description>This is to store the Input(Parameter) that is provided for the particular method.</description>
    <inlineHelpText>This contains the data that is used while issue is raised.</inlineHelpText>
    <label>Input</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>