force-app/main/default/objects/Error_Logger__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>