force-app/main/default/objects/Error_Logger__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Error Loggers (Supervisor)</relationshipLabel>
    <relationshipName>Error_Loggers2</relationshipName>
    <type>Lookup</type>
</CustomField>