force-app/main/default/objects/Error_Logger__c/fields/TransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionDateTime__c</fullName>
    <description>This is to store the transaction time</description>
    <label>TransactionDateTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>