force-app/main/default/objects/Error_Logger__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <label>User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>