force-app/main/default/objects/Error_Logger__c/validationRules/Check_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Resolution</fullName>
    <active>true</active>
    <description>Check Resolution while closing</description>
    <errorConditionFormula>AND(
    TEXT(Status__c) = &quot;Closed&quot;,
    LEN(Resolution__c) = 0
)</errorConditionFormula>
    <errorDisplayField>Resolution__c</errorDisplayField>
    <errorMessage>Resolution Comments is required to close a Incident</errorMessage>
</ValidationRule>