force-app/main/default/objects/Error_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_Ticket__c</columns>
    <columns>Status__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Component_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>