force-app/main/default/objects/Error_Logger__c/listViews/GSS_EMEA_Finance_Error_Logger.listView-meta.xml
<ListView>
    <fullName>GSS_EMEA_Finance_Error_Logger</fullName>
    <filterScope>Queue</filterScope>
    <label>GSS EMEA Finance</label>
    <queue>GSS_EMEA_Finance</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>