force-app/main/default/objects/Error_Logger__c/listViews/GSS_RxWorks_EMEA_Support_Error_Logger.listView-meta.xml
<ListView>
    <fullName>GSS_RxWorks_EMEA_Support_Error_Logger</fullName>
    <filterScope>Queue</filterScope>
    <label>GSS RxWorks EMEA Support</label>
    <queue>GSS_RxWorks_EMEA_Support</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>