force-app/main/default/objects/Error_Logger__c/listViews/Kanban_View.listView-meta.xml
<ListView>
    <fullName>Kanban_View</fullName>
    <columns>NAME</columns>
    <columns>External_Ticket__c</columns>
    <columns>Status__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Component_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Kanban View</label>
</ListView>