force-app/main/default/objects/Error_Logger__c/listViews/Open_Issues.listView-meta.xml
<ListView>
    <fullName>Open_Issues</fullName>
    <columns>NAME</columns>
    <columns>External_Ticket__c</columns>
    <columns>Status__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Component_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Issues</label>
</ListView>