force-app/main/default/objects/Error_Logger__c/listViews/Today_s_Issues.listView-meta.xml
<ListView>
    <fullName>Today_s_Issues</fullName>
    <columns>NAME</columns>
    <columns>External_Ticket__c</columns>
    <columns>Status__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Component_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&#39;s Issues</label>
</ListView>